RESOLVED FIXED24662
Chromium build fixes.
https://bugs.webkit.org/show_bug.cgi?id=24662
Summary Chromium build fixes.
David Levin
Reported 2009-03-17 18:33:33 PDT
These are various fixes that had to happen to make Chromium buildable.
Attachments
Proposed fix. (2.77 KB, patch)
2009-03-17 18:39 PDT, David Levin
dglazkov: review+
David Levin
Comment 1 2009-03-17 18:39:20 PDT
Created attachment 28714 [details] Proposed fix.
David Levin
Comment 2 2009-03-17 18:40:45 PDT
fyi I noticed a missing space in this line: SkRect topBorder = { rect.fLeft, rect.fTop, rect.width(), 1}; and added it locally.
Dimitri Glazkov (Google)
Comment 3 2009-03-17 20:28:33 PDT
Comment on attachment 28714 [details] Proposed fix. r=me. Perhaps modify ChangeLog to have consistent reference to bug url. I like to use this format: URL Description
David Levin
Comment 4 2009-03-17 23:02:02 PDT
Committed as r41805.
Note You need to log in before you can comment on or make changes to this bug.