2009-03-17  David Levin  <levin@chromium.org>

Reviewed by Dimitri Glazkov.

        https://bugs.webkit.org/show_bug.cgi?id=24662
        Chromium build fixes.

        Bug https://bugs.webkit.org/show_bug.cgi?id=24663 tracks
        the invalid implementation of ScriptCallStack.

        No change in behavior, so no test.

        * bindings/v8/ScriptCallStack.h:
        (WebCore::ScriptCallStack::state):
        * platform/graphics/skia/PlatformContextSkia.cpp:
        (PlatformContextSkia::drawRect):

Canonical link: https://commits.webkit.org/33862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41805 268f45cc-cd09-0410-ab3c-d52691b4dbfc